--- a/Xe.BinaryMapper/Xe.BinaryMapper.csproj
+++ b/Xe.BinaryMapper/Xe.BinaryMapper.csproj
@@ -1,7 +1,26 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <IsPackable>true</IsPackable>
+    <Authors>Luciano (Xeeynamo) Ciccariello</Authors>
+    <Description>Map binary streams into C# objects for read and write</Description>
+    <Copyright>Copyright 2019 Luciano Ciccariello</Copyright>
+    <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
+    <PackageProjectUrl>https://github.com/Xeeynamo/Xe.BinaryMapper</PackageProjectUrl>
+    <PackageIconUrl>https://avatars0.githubusercontent.com/u/43698859</PackageIconUrl>
+    <RepositoryType></RepositoryType>
+    <RepositoryUrl>https://github.com/Xeeynamo/Xe.BinaryMapper</RepositoryUrl>
+    <PackageTags>map serialize raw binary data stream</PackageTags>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE.md">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
