--- a/Xe.BinaryMapper/Xe.BinaryMapper.csproj
+++ b/Xe.BinaryMapper/Xe.BinaryMapper.csproj
@@ -14,6 +14,7 @@
     <PackageTags>map serialize raw binary data stream</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
