--- a/Xe.BinaryMapper/Xe.BinaryMapper.csproj
+++ b/Xe.BinaryMapper/Xe.BinaryMapper.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net35;net40;net45</TargetFrameworks>
     <IsPackable>true</IsPackable>
     <Authors>Luciano (Xeeynamo) Ciccariello</Authors>
     <Description>Map binary streams into C# objects for read and write</Description>
